# geist-portal

./: .env.example  .gitattributes  .replit  architecture_summary.txt  package.json  pyproject.toml  requirements.txt
api/: main.py
api/agents/: ingestion_agent.py  proxy_agent.py  skill_agent.py
api/mcp/: server.py
api/memory/: engine.py
api/routes/: chat.py  connect.py  memory.py  skills.py
api/tools/: nango.py
attached_assets/: Pasted-I-m-building-an-autonomous-organizational-memory-OS-cal_1781627017239.txt  Pasted-LI-m-building-an-autonomous-organizational-memory-OS-ca_1781625901987.txt
src/: routeTree.gen.ts
src/routes/: auth.tsx  connect.$tool.tsx  index.tsx
