[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "graphiti-core>=0.29.2",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "litellm>=1.89.1",
    "mcp>=1.27.2",
    "neo4j>=6.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]
